methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:20: error: not found: value getGroundCOlor
      if (getGroundCOlor()==Color.green){
          ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (biscuit==0){
  ^